--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <ul class="hero-item">
             <li>
                 <a href="https://instagram.com/alexandra.bosco.o/" title="Инстаграм">
-                    <img src="/img/instagram.ico" alt="Instagram">
+                    <img src="./img/instagram.ico" alt="Instagram">
                 </a>
             </li>
             <li>
