--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
             </li>
             <li>
                 <a href="https://t.me/alexandra_bosco" title="Телеграм">
-                    <img src="/img/telegram.ico" alt="Telegram">
+                    <img src="./img/telegram.ico" alt="Telegram">
                 </a>
             </li>
             <li>
                 <a href="tel:+79777013107" title="Позвонить">
-                    <img src="/img/call.ico" alt="Call">
+                    <img src="./img/call.ico" alt="Call">
                 </a>
             </li>
         </ul>
@@ -41,14 +41,14 @@
         <section class="services">
             <h2>Услуги</h2>
             <div class="service">
-                <img src="img/New_Look.gif" alt="Наращивание волос">
+                <img src="./img/New_Look.gif" alt="Наращивание волос">
                 <div class="info">
                     <h3>Наращивание волос</h3>
                     <p>Тщательно подобранные натуральные волосы. Микрокапсулы и капсульное наращивание. Подходит для любого типа волос.</p>
                 </div>
             </div>
             <div class="service">
-                <img src="img/Signature.gif" alt="Наращивание ресниц">
+                <img src="./img/Signature.gif" alt="Наращивание ресниц">
                 <div class="info">
                     <h3>Наращивание ресниц</h3>
                     <p>Классическое и объемное наращивание. Индивидуальная длина, изгиб и эффект. Безопасность и комфорт гарантированы.</p>
@@ -59,10 +59,10 @@
         <section class="gallery">
             <h2>Галерея работ</h2>
             <div class="gallery-track">
-                <img src="/img/Gallery1.jpg" alt="Работа 1">
-                <img src="/img/Gallery2.jpg" alt="Работа 2">
-                <img src="/img/Gallery3.jpg" alt="Работа 3">
-                <img src="/img/Gallery4.jpg" alt="Работа 4">
+                <img src="./img/Gallery1.jpg" alt="Работа 1">
+                <img src="./img/Gallery2.jpg" alt="Работа 2">
+                <img src="./img/Gallery3.jpg" alt="Работа 3">
+                <img src="./img/Gallery4.jpg" alt="Работа 4">
             </div>
         </section>
 
@@ -94,19 +94,19 @@
         <section class="contacts">
             <h2>Контакты</h2>
             <p>
-                <img class="icon" src="/img/call1.png" alt="call" />
+                <img class="icon" src="./img/call1.png" alt="call" />
                 <a href="tel:+79777013107">+7 977 701-31-07</a>
             </p>
             <p>
-                <img class="icon" src="/img/inst1.png" alt="Instagram" />
+                <img class="icon" src="./img/inst1.png" alt="Instagram" />
                 <a href="https://instagram.com/alexandra.bosco.o/" target="_blank">@alexandra.bosco.o</a>
             </p>
             <p>
-                <img class="icon" src="/img/teleg1.png" alt="Telegram" />
+                <img class="icon" src="./img/teleg1.png" alt="Telegram" />
                 <a href="https://t.me/alexandra_bosco" target="_blank">@alexandra_bosco</a>
             </p>
             <p>
-                <img class="icon" src="/img/dikidi.png" alt="Telegram" />
+                <img class="icon" src="./img/dikidi.png" alt="Telegram" />
                 <a href="https://dikidi.net/1883467 " target="_blank">Alexandra Bosco</a>
             </p>
         </section>
