--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
         <ul class="hero-item">
             <li>
                 <a href="https://instagram.com/alexandra.bosco.o/" title="Инстаграм">
-                    <img src="../img/instagram.ico" alt="Instagram">
+                    <img src="./img/instagram.ico" alt="Instagram">
                 </a>
             </li>
             <li>
                 <a href="https://t.me/alexandra_bosco" title="Телеграм">
-                    <img src="../img/telegram.ico" alt="Telegram">
+                    <img src="../telegram.ico" alt="Telegram">
                 </a>
             </li>
             <li>
                 <a href="tel:+79777013107" title="Позвонить">
-                    <img src="../img/call.ico" alt="Call">
+                    <img src="./img/call.ico" alt="Call">
                 </a>
             </li>
         </ul>
@@ -41,14 +41,14 @@
         <section class="services">
             <h2>Услуги</h2>
             <div class="service">
-                <img src="../img/New_Look.gif" alt="Наращивание волос">
+                <img src="../New_Look.gif" alt="Наращивание волос">
                 <div class="info">
                     <h3>Наращивание волос</h3>
                     <p>Тщательно подобранные натуральные волосы. Микрокапсулы и капсульное наращивание. Подходит для любого типа волос.</p>
                 </div>
             </div>
             <div class="service">
-                <img src="../img/Signature.gif" alt="Наращивание ресниц">
+                <img src="../Signature.gif" alt="Наращивание ресниц">
                 <div class="info">
                     <h3>Наращивание ресниц</h3>
                     <p>Классическое и объемное наращивание. Индивидуальная длина, изгиб и эффект. Безопасность и комфорт гарантированы.</p>
@@ -98,15 +98,15 @@
                 <a href="tel:+79777013107">+7 977 701-31-07</a>
             </p>
             <p>
-                <img class="icon" src="../img/inst1.png" alt="Instagram" />
+                <img class="icon" src="./img/inst1.png" alt="Instagram" />
                 <a href="https://instagram.com/alexandra.bosco.o/" target="_blank">@alexandra.bosco.o</a>
             </p>
             <p>
-                <img class="icon" src="../img/teleg1.png" alt="Telegram" />
+                <img class="icon" src="../teleg1.png" alt="Telegram" />
                 <a href="https://t.me/alexandra_bosco" target="_blank">@alexandra_bosco</a>
             </p>
             <p>
-                <img class="icon" src="../img/dikidi.png" alt="Telegram" />
+                <img class="icon" src="./img/dikidi.png" alt="Telegram" />
                 <a href="https://dikidi.net/1883467 " target="_blank">Alexandra Bosco</a>
             </p>
         </section>
