--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <section class="contacts">
             <h2>Контакты</h2>
             <p>
-                <img class="icon" src="../img/call1.png" alt="call" />
+                <img class="icon" src="./img/call1.png" alt="call" />
                 <a href="tel:+79777013107">+7 977 701-31-07</a>
             </p>
             <p>
