--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </li>
             <li>
                 <a href="https://t.me/alexandra_bosco" title="Телеграм">
-                    <img src="../telegram.ico" alt="Telegram">
+                    <img src="./img/telegram.ico" alt="Telegram">
                 </a>
             </li>
             <li>
@@ -41,14 +41,14 @@
         <section class="services">
             <h2>Услуги</h2>
             <div class="service">
-                <img src="../New_Look.gif" alt="Наращивание волос">
+                <img src="./img/New_Look.gif" alt="Наращивание волос">
                 <div class="info">
                     <h3>Наращивание волос</h3>
                     <p>Тщательно подобранные натуральные волосы. Микрокапсулы и капсульное наращивание. Подходит для любого типа волос.</p>
                 </div>
             </div>
             <div class="service">
-                <img src="../Signature.gif" alt="Наращивание ресниц">
+                <img src="./img/Signature.gif" alt="Наращивание ресниц">
                 <div class="info">
                     <h3>Наращивание ресниц</h3>
                     <p>Классическое и объемное наращивание. Индивидуальная длина, изгиб и эффект. Безопасность и комфорт гарантированы.</p>
@@ -102,7 +102,7 @@
                 <a href="https://instagram.com/alexandra.bosco.o/" target="_blank">@alexandra.bosco.o</a>
             </p>
             <p>
-                <img class="icon" src="../teleg1.png" alt="Telegram" />
+                <img class="icon" src="./img/teleg1.png" alt="Telegram" />
                 <a href="https://t.me/alexandra_bosco" target="_blank">@alexandra_bosco</a>
             </p>
             <p>
