--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
         <section class="services">
             <h2>Услуги</h2>
             <div class="service">
-                <img src="./img/New_Look.gif" alt="Наращивание волос">
+                <img src="./img/New_Look.mp4" alt="Наращивание волос">
                 <div class="info">
                     <h3>Наращивание волос</h3>
                     <p>Тщательно подобранные натуральные волосы. Микрокапсулы и капсульное наращивание. Подходит для любого типа волос.</p>
                 </div>
             </div>
             <div class="service">
-                <img src="./img/Signature.gif" alt="Наращивание ресниц">
+                <img src="./img/Signature.mp4" alt="Наращивание ресниц">
                 <div class="info">
                     <h3>Наращивание ресниц</h3>
                     <p>Классическое и объемное наращивание. Индивидуальная длина, изгиб и эффект. Безопасность и комфорт гарантированы.</p>
