--- a/index.html
+++ b/index.html
@@ -43,12 +43,14 @@
             <div class="service">
                 <img src="./img/New_Look.gif" alt="Наращивание волос">
                 <div class="info">
+                    <h3>Наращивание волос</h3>
                     <p>Тщательно подобранные натуральные волосы. Микрокапсулы и капсульное наращивание. Подходит для любого типа волос.</p>
                 </div>
             </div>
             <div class="service">
                 <img src="./img/Signature.gif" alt="Наращивание ресниц">
                 <div class="info">
+                    <h3>Наращивание ресниц</h3>
                     <p>Классическое и объемное наращивание. Индивидуальная длина, изгиб и эффект. Безопасность и комфорт гарантированы.</p>
                 </div>
             </div>
@@ -76,16 +78,13 @@
             </details>
         </section>
 
-        <section class="reviews">
-            <h2>Отзывы клиентов</h2>
-            <div class="review">
-                <p>“Очень понравилось наращивание волос! Всё аккуратно, держится отлично, выгляжу роскошно. Спасибо, Александра!”</p>
-                <span>— Екатерина</span>
-            </div>
-        <div class="review">
-                <p>“Реснички просто бомба! Держатся больше месяца, ничего не щиплет, как в спа-салоне. Мастер - профи!”</p>
-                <span>— Алина</span>
-            </div>
+        <section class="calculator">
+            <div class="uCalc_469670"></div
+                ><script> var widgetOptions469670 = { bg_color: "transparent" }; 
+                (function() { var a = document.createElement("script"), h = "head"; 
+                a.async = true; 
+                a.src = (document.location.protocol == "https:" ? "https:" : "http:") + "//ucalc.pro/api/widget.js?id=469670&t="+Math.floor(new Date()/18e5); document.getElementsByTagName(h)[0].appendChild(a) })();
+                </script>
         </section>
 
         <!-- КОНТАКТЫ -->
@@ -108,6 +107,7 @@
                 <a href="https://dikidi.net/1883467 " target="_blank">Alexandra Bosco</a>
             </p>
         </section>
+
 
     </main>
 
