--- a/index.html
+++ b/index.html
@@ -79,12 +79,7 @@
         </section>
 
         <section class="calculator">
-            <div class="uCalc_469670"></div
-                ><script> var widgetOptions469670 = { bg_color: "transparent" }; 
-                (function() { var a = document.createElement("script"), h = "head"; 
-                a.async = true; 
-                a.src = (document.location.protocol == "https:" ? "https:" : "http:") + "//ucalc.pro/api/widget.js?id=469670&t="+Math.floor(new Date()/18e5); document.getElementsByTagName(h)[0].appendChild(a) })();
-                </script>
+            <div class="uCalc_469670"></div><script> var widgetOptions469670 = { bg_color: "transparent" }; (function() { var a = document.createElement("script"), h = "head"; a.async = true; a.src = (document.location.protocol == "https:" ? "https:" : "http:") + "//ucalc.pro/api/widget.js?id=469670&t="+Math.floor(new Date()/18e5); document.getElementsByTagName(h)[0].appendChild(a) })();</script>
         </section>
 
         <!-- КОНТАКТЫ -->
