--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 
         <section class="intro">
             <h2>Преображение начинается здесь</h2>
-            <p>Премиальные услуги по наращиванию волос и ресниц от мастера Alexandra Bosco. Индивидуальный подход, сертифицированные материалы, гарантированный результат.</p>
+                <a href="https://dikidi.net/1883467?p=1.pi-si&o=13&s=20126573">
+                    <p>Тщательно подобранные натуральные волосы. Микрокапсулы и капсульное наращивание. Подходит для любого типа волос.</p>
+                </a>
             <h2>Услуги</h2>
         </section>
 
@@ -43,7 +45,9 @@
             <div class="service">
                 <img src="./img/New_Look.gif" alt="Наращивание волос">
                 <div class="info">
-                    <p>Тщательно подобранные натуральные волосы. Микрокапсулы и капсульное наращивание. Подходит для любого типа волос.</p>
+                    <a href="https://dikidi.net/1883467?p=1.pi-si&o=13&s=20126782">
+                        <p>Классическое и объемное наращивание. Индивидуальная длина, изгиб и эффект. Безопасность и комфорт гарантированы.</p>
+                    </a>
                 </div>
             </div>
             <div class="service">
