--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
                     </a>
                 </div>
             </div>
+            <div class="service">
+                <img src="./img/New_Look.gif" alt="Наращивание волос">
+                <div class="info">
+                    <a href="https://dikidi.net/1883467?p=1.pi-si&o=13&s=20126573">
+                        <p>Тщательно подобранные натуральные волосы. Микрокапсулы и капсульное наращивание. Подходит для любого типа волос.</p>
+                    </a>
+                </div>
+            </div>
         </section>
 
         <section class="gallery-container">
