--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="service">
                 <img src="./img/New_Look.gif" alt="Наращивание волос">
                 <div class="info">
-                    <a href="https://dikidi.net/1883467?p=1.pi-si&o=13&s=20126573">
+                    <a href="https://dikidi.net/1883467?p=1.pi-si&o=13&s=20126573" target="_blank">
                         <p>Тщательно подобранные натуральные волосы. Микрокапсулы и капсульное наращивание. Подходит для любого типа волос.</p>
                     </a>
                 </div>
@@ -51,7 +51,7 @@
             <div class="service">
                 <img src="./img/Signature.gif" alt="Наращивание ресниц">
                 <div class="info">
-                    <a href="https://dikidi.net/1883467?p=1.pi-si&o=13&s=20126782">
+                    <a href="https://dikidi.net/1883467?p=1.pi-si&o=13&s=20126782" target="_blank">
                         <p>Классическое и объемное наращивание. Индивидуальная длина, изгиб и эффект. Безопасность и комфорт гарантированы.</p>
                     </a>
                 </div>
@@ -59,7 +59,7 @@
             <div class="service">
                 <img src="./img/New_Look.gif" alt="Наращивание волос">
                 <div class="info">
-                    <a href="https://dikidi.net/1883467?p=1.pi-si&o=13&s=20126573">
+                    <a href="https://dikidi.net/1883467?p=1.pi-si&o=13&s=20126573" target="_blank">
                         <p>Тщательно подобранные натуральные волосы. Микрокапсулы и капсульное наращивание. Подходит для любого типа волос.</p>
                     </a>
                 </div>
