--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
         <section class="intro">
             <h2>Преображение начинается здесь</h2>
-                <p>Премиальные услуги по наращиванию волос и ресниц от мастера Alexandra Bosco. Индивидуальный подход, сертифицированные материалы, гарантированный результат.</p>
-            <h2>Услуги</h2>
+            <p>Премиальные услуги по наращиванию волос и ресниц от мастера Alexandra Bosco. Индивидуальный подход, сертифицированные материалы, гарантированный результат.</p>
+            <h2>Услуги по наращиванию волос</h2>
         </section>
 
         <section class="services">
@@ -49,7 +49,7 @@
                 </div>
             </div>
             <div class="service">
-                <img src="./img/Signature.gif" alt="Наращивание ресниц">
+                <img src="./img/Signature.gif" alt="Наращивание волос">
                 <div class="info">
                     <a href="https://dikidi.net/1883467?p=1.pi-si&o=13&s=20126782" target="_blank">
                         <p>Классическое и объемное наращивание. Индивидуальная длина, изгиб и эффект. Безопасность и комфорт гарантированы.</p>
@@ -66,6 +66,58 @@
             </div>
         </section>
 
+        <section class="intro">
+            <h2>Услуги по наращиванию ресниц</h2>
+        </section>
+
+        <section class="services">
+            <div class="service-eyelashes">
+            <h4 class="title-eyelashes">Натуральный эффект (1-2D)</h4>
+                <img src="./img/Eyelashes/eyelashes1.jpg" alt="Наращивание ресниц">
+                <div class="info-eyelashes">
+                    <a href="https://dikidi.net/1883467?p=2.pi-ssm-si&s=20133551" target="_blank">
+                        <p>LED-наращивание ресниц идеальный выбор для тех, кто ценит современный подход, скорость, комфорт и результат, который держится</p>
+                    </a>
+                </div>
+            </div>
+            <div class="service-eyelashes">
+            <h4 class="title-eyelashes">Трендовый эффект</h4>
+                <img src="./img/Eyelashes/eyelashes2.jpg" alt="Наращивание ресниц">
+                <div class="info-eyelashes">
+                    <a href="https://dikidi.net/1883467?p=2.pi-ssm-si&s=20133559" target="_blank">
+                        <p>Самая современная технология, которая выводит комфорт и стойкость на новый уровень</p>
+                    </a>
+                </div>
+            </div>
+            <div class="service-eyelashes">
+            <h4 class="title-eyelashes">Уголки</h4>
+                <img src="./img/Eyelashes/eyelashes3.jpg" alt="Наращивание ресниц">
+                <div class="info-eyelashes">
+                    <a href="https://dikidi.net/1883467?p=2.pi-ssm-si&s=20139842" target="_blank">
+                        <p>Эффект мягкого акцента и выразительного взгляда</p>
+                    </a>
+                </div>
+            </div>
+            <div class="service-eyelashes">
+            <h4 class="title-eyelashes">Яркий эффект (3-5D)</h4>
+                <img src="./img/Eyelashes/eyelashes4.jpg" alt="Наращивание ресниц">
+                <div class="info-eyelashes">
+                    <a href="https://dikidi.net/1883467?p=2.pi-ssm-si&s=20133575" target="_blank">
+                        <p>Самая современная технология, которая выводит комфорт и стойкость на новый уровень</p>
+                    </a>
+                </div>
+            </div>
+            <div class="service-eyelashes">
+            <h4 class="title-eyelashes">Express</h4>
+                <img src="./img/Eyelashes/eyelashes5.jpg" alt="Наращивание ресниц">
+                <div class="info-eyelashes">
+                    <a href="https://dikidi.net/1883467?p=2.pi-ssm-si&s=20139814" target="_blank">
+                        <p>Быстро, аккуратно, эфектно. Идеальный вариант для тех, у кого мало времени, но хочется выглядеть свежо и ухоженно</p>
+                    </a>
+                </div>
+            </div>
+        </section>
+
         <section class="gallery-container">
             <h2>Галерея работ</h2>
             <div class="gallery">
@@ -73,6 +125,9 @@
                 <img src="./img/Gallery2.jpg" alt="Работа 2">
                 <img src="./img/Gallery3.jpg" alt="Работа 3">
                 <img src="./img/Gallery4.jpg" alt="Работа 4">
+                <img src="./img/Gallery5.jpg" alt="Работа 5">
+                <img src="./img/Gallery6.jpg" alt="Работа 6">
+                <img src="./img/Gallery7.jpg" alt="Работа 7">
             </div>
             <button class="prev">&#10094</button>
             <button class="next">&#10095</button>
