--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
          <button class="arrow left">&#10094;</button>
 
           <div class="gallery-track" id="gallery-track">
-            <div class="gallery-item"><img src="img/gallery1.jpg" alt="Image 1"></div>
-            <div class="gallery-item"><img src="img/gallery2.jpg" alt="Image 2"></div>
-            <div class="gallery-item"><img src="img/gallery3.jpg" alt="Image 3"></div>
-            <div class="gallery-item"><img src="img/gallery4.jpg" alt="Image 4"></div>
-            <div class="gallery-item"><img src="img/gallery5.jpg" alt="Image 5"></div>
-            <div class="gallery-item"><img src="img/gallery6.jpg" alt="Image 6"></div>
+            <div class="gallery-item"><img src="./img/gallery1.jpg" alt="Image 1"></div>
+            <div class="gallery-item"><img src="./img/gallery2.jpg" alt="Image 2"></div>
+            <div class="gallery-item"><img src="./img/gallery3.jpg" alt="Image 3"></div>
+            <div class="gallery-item"><img src="./img/gallery4.jpg" alt="Image 4"></div>
+            <div class="gallery-item"><img src="./img/gallery5.jpg" alt="Image 5"></div>
+            <div class="gallery-item"><img src="./img/gallery6.jpg" alt="Image 6"></div>
           </div>
 
           <button class="arrow right">&#10095;</button>
@@ -144,4 +144,5 @@
     });
 </script>
 </body>
+
 </html>
